--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -5486,7 +5486,7 @@ button.disabled {
 .graph .left-indicators {
     position: absolute;
     top: 0;
-    left: -5px;
+    left: -10px;
     height: 100%;
     display: flex;
     align-items: flex-end;
@@ -5498,8 +5498,8 @@ button.disabled {
     flex-direction: column;
     border-right: 1px solid #fff;
     align-items: center;
-    padding-left: 4px;
-    height: calc(100%);
+    padding-right: 5px;
+    height: 100%;
 }
 
 .graph .graph-wrap {
