--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4476,7 +4476,7 @@ button.disabled {
 .graph .left-indicators {
     position: absolute;
     top: 0;
-    left: -5px;
+    left: -10px;
     height: 100%;
     display: flex;
     align-items: flex-end;
@@ -4488,8 +4488,8 @@ button.disabled {
     flex-direction: column;
     border-right: 1px solid #fff;
     align-items: center;
-    padding-left: 4px;
-    height: calc(100%);
+    padding-right: 5px;
+    height: 100%;
 }
 
 .graph .graph-wrap {
