--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -351,6 +351,125 @@ template {
   display: none;
 }
 
+/*!**********************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./node_modules/react-notifications/lib/notifications.css ***!
+  \**********************************************************************************************************/
+@charset "UTF-8";
+@font-face {
+  font-family: 'Notification';
+  src: url(/images/notification.eot);
+  src: url(/images/notification.eot?#iefixs3g3t9) format("embedded-opentype"), url(/images/notification.woff) format("woff"), url(/images/notification.ttf) format("truetype"), url(/images/notification.svg#notification) format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+.notification-container {
+  box-sizing: border-box;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 999999;
+  width: 320px;
+  padding: 0px 15px;
+  max-height: calc(100% - 30px);
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.notification {
+  box-sizing: border-box;
+  padding: 15px 15px 15px 58px;
+  border-radius: 2px;
+  color: #fff;
+  background-color: #ccc;
+  box-shadow: 0 0 12px #999;
+  cursor: pointer;
+  font-size: 1em;
+  line-height: 1.2em;
+  position: relative;
+  opacity: 0.9;
+  margin-top: 15px;
+}
+
+.notification .title {
+  font-size: 1em;
+  line-height: 1.2em;
+  font-weight: bold;
+  margin: 0 0 5px 0;
+}
+
+.notification:hover, .notification:focus {
+  opacity: 1;
+}
+
+.notification-enter {
+  visibility: hidden;
+  transform: translate3d(100%, 0, 0);
+}
+
+.notification-enter.notification-enter-active {
+  visibility: visible;
+  transform: translate3d(0, 0, 0);
+  transition: all 0.4s;
+}
+
+.notification-leave {
+  visibility: visible;
+  transform: translate3d(0, 0, 0);
+}
+
+.notification-leave.notification-leave-active {
+  visibility: hidden;
+  transform: translate3d(100%, 0, 0);
+  transition: all 0.4s;
+}
+
+.notification:before {
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  margin-top: -14px;
+  display: block;
+  font-family: 'Notification';
+  width: 28px;
+  height: 28px;
+  font-size: 28px;
+  text-align: center;
+  line-height: 28px;
+}
+
+.notification-info {
+  background-color: #2f96b4;
+}
+
+.notification-info:before {
+  content: "";
+}
+
+.notification-success {
+  background-color: #51a351;
+}
+
+.notification-success:before {
+  content: "";
+}
+
+.notification-warning {
+  background-color: #f89406;
+}
+
+.notification-warning:before {
+  content: "";
+}
+
+.notification-error {
+  background-color: #bd362f;
+}
+
+.notification-error:before {
+  content: "";
+}
+
 /*!***************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./src/styles/notfound.css ***!
   \***************************************************************************/
@@ -2281,6 +2400,10 @@ button.disabled {
     flex-direction: column;
 }
 
+.dashboard .change-password .form fieldset {
+    padding: 0;
+}
+
 .dashboard .change-password .form .field-wrap {
     position: relative;
 }
@@ -2361,6 +2484,7 @@ button.disabled {
     margin-top: 20px;
     padding: 15px 0;
     cursor: pointer;
+    width: 100%;
 }
 
 .dashboard .main {
@@ -6150,6 +6274,7 @@ button.disabled {
     right: 10px;
     bottom: 0;
     margin: auto 0;
+    transition: 200ms;
 }
 
 .admin-panel .edit-user .edit-forms .form .role-wrap .role-menu {
