--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -5360,10 +5360,18 @@ button.disabled {
     align-items: center;
 }
 
+.admin-panel .search {
+    display: flex;
+}
+
 .admin-panel .search-bar {
     display: flex;
     align-items: center;
     transition: 300ms;
+}
+
+.admin-panel .search-bar + .search-bar {
+    margin-left: 10px;
 }
 
 .admin-panel .search-bar .search-field {
@@ -5621,10 +5629,11 @@ button.disabled {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
+    align-items: flex-end;
     border-right: 1px solid #fff;
-    align-items: center;
     padding-right: 5px;
     height: 100%;
+    width: 35px;
 }
 
 .graph .graph-wrap {
@@ -5706,6 +5715,36 @@ button.disabled {
     z-index: 2;
     display: flex;
     flex-direction: column;
+}
+
+.admin-panel .users .search-bar {
+    display: flex;
+    justify-content: space-between;
+}
+
+.admin-panel .users .search-bar .search-bar-wrap {
+    display: flex;
+} 
+
+.admin-panel .users .search-bar .info-notif {
+    font-style: italic;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 27px;
+    cursor: pointer;
+    border: 2px solid #2f96b4;
+    border-radius: 50%;
+    transition: 300ms;
+    background: transparent;
+    width: 35px;
+    height: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.admin-panel .users .search-bar .info-notif:hover {
+    background-color: #2f96b4;
 }
 
 .admin-panel .users .confirm .heading {
@@ -5854,6 +5893,10 @@ button.disabled {
     max-height: none;
 }
 
+.admin-panel .users .users-list .all-users .user.active .e-mail {
+    max-height: none;
+}
+
 .admin-panel .users .users-list .all-users .user:nth-child(2n) {
     background-color: #1C1C24;
 }
@@ -5886,6 +5929,8 @@ button.disabled {
     width: 275px;
     display: flex;
     justify-content: center;
+    max-height: 36px;
+    overflow: hidden;
 }
 
 .admin-panel .users .users-list .all-users .user .registered-date {
@@ -6173,19 +6218,68 @@ button.disabled {
     display: flex;
     justify-content: space-between;
     user-select: none;
-    cursor: pointer;
     align-items: center;
 }
 
 .admin-panel .edit-user .user-subscriptions .product .reset-freeze-cooldown .label {
-    cursor: pointer;
     font-size: 15.5px;
 }
 
-.admin-panel .edit-user .user-subscriptions .product .reset-freeze-cooldown .checkbox {
+.admin-panel .edit-user .user-subscriptions .product .reset-freeze-cooldown .checkbox-wrap {
     cursor: pointer;
-    width: 15px;
-    height: 15px;
+    position: relative;
+    width: 16px;
+    height: 16px;
+}
+
+.admin-panel .edit-user .user-subscriptions .product .reset-freeze-cooldown .checkbox-wrap:hover .checkbox-checked {
+    background-color: #aaa;
+}
+
+.admin-panel .edit-user .user-subscriptions .product .reset-freeze-cooldown .checkbox {
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    line-height: 16px;
+    z-index: 2;
+}
+
+.admin-panel .edit-user .user-subscriptions .product .reset-freeze-cooldown .checkbox:checked + .checkbox-checked {
+    background-color: #50B5FF;
+}
+
+.admin-panel .edit-user .user-subscriptions .product .reset-freeze-cooldown .checkbox:checked + .checkbox-checked > * {
+    opacity: 1;
+}
+
+.admin-panel .edit-user .user-subscriptions .product .reset-freeze-cooldown .checkbox-checked {
+    background-color: #fff;
+    border-radius: 3px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
+.admin-panel .edit-user .user-subscriptions .product .reset-freeze-cooldown .checkbox-checked > * {
+    opacity: 0;
+}
+
+.admin-panel .edit-user .user-subscriptions .product .reset-freeze-cooldown .checkbox-checked .check-mark {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    width: 10px;
+    height: 8px;
 }
 
 .admin-panel .edit-user .user-subscriptions .product .buttons {
@@ -9534,6 +9628,40 @@ button.disabled {
 
 .admin-panel .product-news .news-wrap .product .buttons .button.delete-all-news:hover {
     background-color: #1C6FF2;
+}
+
+.admin-panel .inject-logs {
+    padding: var(--padding-top-page) 0 calc(var(--padding-top-page) * 2);
+}
+
+.admin-panel .crash-logs {
+    padding: var(--padding-top-page) 0 calc(var(--padding-top-page) * 2);
+}
+
+.admin-panel .crash-logs h2 {
+    text-align: center;
+    font-size: 24px;
+    line-height: 36px;
+    font-weight: 700;
+    letter-spacing: .1px;
+}
+
+.admin-panel .crash-logs .search .clean-logs {
+    background-color: #FF000070;
+    border: none;
+    border-radius: 5px;
+    padding: 12px 0;
+    width: 180px;
+    cursor: pointer;
+    transition: 300ms;
+    color: #fff;
+    margin-left: 10px;
+    font-size: 18px;
+    line-height: 27px;
+}
+
+.admin-panel .crash-logs .search .clean-logs:hover {
+    background-color: #92191978;
 }
 
 .admin-panel .settings {
