--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -588,7 +588,6 @@ template {
   \*******************************************************************************/
 .slider {
     position: relative;
-    margin-top: 50px;
 }
 
 .slider .slick-track {
@@ -599,6 +598,10 @@ template {
 
 .slider .slick-list {
     width: 1170px;
+    min-height: 410px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
 }
 
 .slider .slick-arrow {
@@ -1630,6 +1633,13 @@ button.disabled {
     font-family: Roboto, sans-serif;
     color: #fff;
     z-index: 1;
+    transition: 300ms;
+}
+
+.home .slider .pop-product:hover {
+    transform: translateY(-15px);
+    -webkit-box-shadow: 0px 2px 10px 1px rgba(255,255,255, .1);
+    box-shadow: 0px 2px 10px 1px rgba(255,255,255, .1);
 }
 
 .home .slider .link-to {
@@ -1638,6 +1648,8 @@ button.disabled {
     background: none;
     border: none;
     cursor: pointer;
+    transition: 300ms;
+    display: block;
 }
 
 .home .slider .pop-product .pop-product-blackBG {
