--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -501,6 +501,13 @@ button.disabled {
     font-family: Roboto, sans-serif;
     color: #fff;
     z-index: 1;
+    transition: 300ms;
+}
+
+.home .slider .pop-product:hover {
+    transform: translateY(-15px);
+    -webkit-box-shadow: 0px 2px 10px 1px rgba(255,255,255, .1);
+    box-shadow: 0px 2px 10px 1px rgba(255,255,255, .1);
 }
 
 .home .slider .link-to {
@@ -509,6 +516,8 @@ button.disabled {
     background: none;
     border: none;
     cursor: pointer;
+    transition: 300ms;
+    display: block;
 }
 
 .home .slider .pop-product .pop-product-blackBG {
