--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -990,6 +990,12 @@ button.disabled {
     z-index: 1;
 }
 
+.dashboard .header {
+    position: sticky;
+    z-index: 5;
+    top: 0;
+}
+
 .dashboard .nav {
     border-bottom: 1px solid #3c3c4d;
     background: #1C1C24;
@@ -2210,7 +2216,7 @@ button.disabled {
     font-size: 12px;
     color: #92929D;
     line-height: 14px;
-    margin-left: 5px;
+    margin-left: 10px;
     min-width: 190px;
     text-align: left;
 }
@@ -4483,20 +4489,22 @@ button.disabled {
 }
 
 .graph {
-    padding: 20px;
+    padding: var(--graph-padding);
     font-size: 13px;
-    height: 280px;
+    height: calc(280px + 20px);
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     border-radius: 12px;
+    position: relative;
     --graph-theme-height: 15px;
+    --graph-padding: 20px;
 }
 
 .graph .graph-theme {
     position: absolute;
-    top: 0;
-    right: 0;
+    top: var(--graph-padding);
+    right: var(--graph-padding);
     display: flex;
     height: var(--graph-theme-height);
 }
@@ -4581,6 +4589,8 @@ button.disabled {
 
 .graph .bottom-indicators .day {
     width: 75px;
+    display: flex;
+    justify-content: center;
 }
 
 .admin-panel .users {
@@ -5060,6 +5070,23 @@ button.disabled {
     margin-left: 17px;
 }
 
+.admin-panel .admin-panel-wrap .edit-user .user-subscriptions .not-existing-product {
+    justify-content: space-between;
+    padding-top: 150px;
+}
+
+.admin-panel .admin-panel-wrap .edit-user .user-subscriptions .not-existing-product .product-title {
+    margin-top: 0;
+}
+
+.admin-panel .admin-panel-wrap .edit-user .user-subscriptions .not-existing-product .field-wrap {
+    margin-top: 0;
+}
+
+.admin-panel .admin-panel-wrap .edit-user .user-subscriptions .not-existing-product .buttons {
+    margin-top: 45px;
+}
+
 .admin-panel .edit-user .user-subscriptions .product:first-child {
     margin-left: 0;
 }
@@ -5082,8 +5109,6 @@ button.disabled {
 
 .admin-panel .edit-user .user-subscriptions .product .product-title {
     width: 100%;
-    display: flex;
-    justify-content: center;
     margin-top: 15px;
     font-weight: 600;
     height: 24px;
@@ -5206,6 +5231,18 @@ button.disabled {
 
 .admin-panel .edit-user .user-subscriptions .product .buttons .freeze:hover {
     background-color: #1F1F26;
+}
+
+.admin-panel .edit-user .user-subscriptions .product .buttons .unfreeze {
+    background: #1E75FF;
+    border: 1px solid #1E75FF;
+    color: #fff;
+    transition: 200ms;
+    mix-blend-mode: luminosity;
+}
+
+.admin-panel .edit-user .user-subscriptions .product .buttons .unfreeze:hover {
+    background-color: #13489e;
 }
 
 .admin-panel .edit-user .edit-forms {
