--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4255,6 +4255,7 @@ button.disabled {
 
 .admin-panel .search {
     display: flex;
+    transition: 300ms;
 }
 
 .admin-panel .search-bar {
@@ -8680,6 +8681,7 @@ button.disabled {
     letter-spacing: .1px;
     color: #fff;
     margin-top: 20px;
+    transition: 300ms;
 }
 
 .admin-panel .logs .table .heading {
