--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -1380,7 +1380,7 @@ button.disabled {
     text-transform: uppercase;
     background: transparent;
     cursor: pointer;
-    width: 170px;
+    min-width: 170px;
     display: flex;
     justify-content: center;
 }
@@ -1709,6 +1709,7 @@ button.disabled {
     padding: 40px 30px 50px 30px;
     z-index: 2;
     transition: 300ms;
+    user-select: none;
 }
 
 .home .advantages .advantage:hover {
@@ -3893,6 +3894,15 @@ button.disabled {
 .dashboard .main .subscriptions .all-subscriptions .subscription .content .status-content .buttons .button.freeze:hover {
     background-color: rgba(255, 255, 255, .1);
     border: 1px solid transparent;
+}
+
+.dashboard .main .subscriptions .all-subscriptions .subscription .content .status-content .buttons .button.refuse:hover {
+    background-color: rgba(255, 255, 255, .1);
+    border: 1px solid transparent;
+}
+
+.dashboard .main .subscriptions .all-subscriptions .subscription .content .status-content.expired .buttons .button:first-of-type:hover {
+    background-color: rgba(252, 90, 90, .6);
 }
 
 .dashboard .main .subscriptions .all-subscriptions .subscription .content .status-content.freezed .buttons .button.extend:hover {
