--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4130,16 +4130,15 @@ button.disabled {
 
 .choosing-cost-modal .activate-promocode .activate {
     min-width: 130px;
-    background: transparent;
-    color: inherit;
-    border: 1px solid #FAFAFB;
-    cursor: pointer;
     transition: 300ms;
+    background-color: #1E75FF;
+    color: inherit;
+    border: none;
+    cursor: pointer;
 }
 
 .choosing-cost-modal .activate-promocode .activate:hover {
-    background-color: #FAFAFB;
-    color: #1C1C24;
+    background-color: #1C6FF2;
 }
 
 .home .footer {
