downloading loader api is created

--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -2644,6 +2644,14 @@ button.disabled {
     justify-content: center;
 }
 
+.dashboard .main .lobby .info .buttons .button.download-loader {
+    background-color: #1E75FF;
+}
+
+.dashboard .main .lobby .info .buttons .button.download-loader:hover {
+    background-color: #1C6FF2;
+}
+
 .dashboard .main .lobby .info .buttons .subs:last-child:hover {
     background-color: #1F1F26;
 }
@@ -5388,6 +5396,8 @@ button.disabled {
     font-weight: 600;
     font-size: 12px;
     line-height: 18px;
+    text-decoration: none;
+    text-align: center;
 }
 
 .general-footer .download-loader:hover {
@@ -5450,6 +5460,7 @@ button.disabled {
 
 .admin-panel {
     position: relative;
+    background-color: #1C1C24;
 }
 
 .admin-panel-wrap {
