--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -1301,11 +1301,14 @@ button.disabled {
     height: 50px;
     display: flex;
     align-items: center;
+    color: inherit;
+    text-decoration: none;
 }
 
 .home .nav .download-loader .text-content {
     display: flex;
     align-items: center;
+    pointer-events: none;
 }
 
 .home .nav .download-loader:hover {
@@ -1319,6 +1322,7 @@ button.disabled {
 
 .home .nav .download-loader img {
     padding: 0 20px;
+    pointer-events: none;
 }
 
 .home .nav .download-loader .text-content {
