--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -169,11 +169,14 @@ button.disabled {
     height: 50px;
     display: flex;
     align-items: center;
+    color: inherit;
+    text-decoration: none;
 }
 
 .home .nav .download-loader .text-content {
     display: flex;
     align-items: center;
+    pointer-events: none;
 }
 
 .home .nav .download-loader:hover {
@@ -187,6 +190,7 @@ button.disabled {
 
 .home .nav .download-loader img {
     padding: 0 20px;
+    pointer-events: none;
 }
 
 .home .nav .download-loader .text-content {
